[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/KrunchBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scripts/menus/Main_Menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/ui/audioSliders.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 1 )

[node name="Main_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="title" type="Label" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 287.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 1 )
text = "Scaling Up
Industries"

[node name="continueButton" type="Button" parent="."]
visible = false
margin_left = 64.0
margin_top = 320.0
margin_right = 133.0
margin_bottom = 340.0
text = "Continue"

[node name="startButton" type="Button" parent="."]
margin_left = 64.0
margin_top = 360.0
margin_right = 105.0
margin_bottom = 380.0
text = "Start"

[node name="audioSliders" parent="." instance=ExtResource( 3 )]
margin_left = 232.0
margin_top = 344.0
margin_right = 560.0
margin_bottom = 416.0

[connection signal="pressed" from="continueButton" to="." method="_on_continueButton_pressed"]
[connection signal="pressed" from="startButton" to="." method="_on_startButton_pressed"]
